--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,3 @@
-body, html {
-    margin: 0;
-    padding: 0;
-  }
-
-html, body {
-height: 100%;
-width: 100%;
-}
-/* Additional styles to ensure the div also takes full height and width */
-.full-height-width {
-height: 100%;
-width: 100%;
-background-color: lightblue; /* Just for visibility */
-position: relative;
-}
-
-main { padding: 20px; width: 100%; height: 100%;}
-#viewer { 
-  height: 80%;
-  width: 50%;
-  float: left;
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:58754b600322ef89083bcfc0b68adbe108f6935b24342dacbf6396d2eb380bf6
+size 398
